@@ -1,8 +1,9 @@
-June 2012
+July 2012
   - quick (un)lock for users
   - allow to disable tools
   - LAM Pro:
    -> Custom fields module allows to manage custom LDAP attributes in Self Service
+   -> Self service now supports user self registration
    -> Separate group of names module for users allows to manage memberships if Unix module is not used (RFE 3504429)
    -> Named object module for groups (used for rfc2307bis schema)
    -> Password change page allows account (un)locking
